TEST_PROGRAMS/VALID/slices.go
package main

func main() {
    var x []string;
    s[0] = "a"
    s[1] = "b"
    s[2] = "c"

    s = append(s,"d")
}
