TEST_PROGRAMS/INVALID/08/sliceLiteral.go
package main;
var x []int = []int{1,2,3};
